@@ -9,7 +9,7 @@ Read_file dom cylindre.geom
 VerifierCoin dom \{ \}
 Dilate dom 1000
 RegroupeBord dom perioz \{ Surfa Surfanz \}
-Reordonner_faces_periodiques dom perioz
+Corriger_frontiere_periodique { domaine dom bord perioz }
 {\bf{RegroupeBord dom periox \{ Entree Sortie \} }}
 # END MESH #
 # BEGIN PARTITION
