@@ -74,7 +74,6 @@
 #include <Remove_Invalid_Internal_Boundaries.h>
 #include <Remove_elem.h>
 #include <Reordonner.h>
-#include <Reordonner_faces_periodiques.h>
 #include <Reorienter_tetraedres.h>
 #include <Reorienter_triangles.h>
 #include <Rotation.h>
@@ -172,30 +171,29 @@ RegroupeBord inst68;verifie_pere(inst68);
 Remove_Invalid_Internal_Boundaries inst69;verifie_pere(inst69);
 Remove_elem inst70;verifie_pere(inst70);
 Reordonner inst71;verifie_pere(inst71);
-Reordonner_faces_periodiques inst72;verifie_pere(inst72);
-Reorienter_tetraedres inst73;verifie_pere(inst73);
-Reorienter_triangles inst74;verifie_pere(inst74);
-Rotation inst75;verifie_pere(inst75);
-Scatter inst76;verifie_pere(inst76);
-ScatterFormatte inst77;verifie_pere(inst77);
-Segment inst78;verifie_pere(inst78);
-Sous_Zone inst79;verifie_pere(inst79);
-SupprimeBord inst80;verifie_pere(inst80);
-Tetraedre inst81;verifie_pere(inst81);
-Tetraedriser inst82;verifie_pere(inst82);
-Tetraedriser_homogene inst83;verifie_pere(inst83);
-Tetraedriser_homogene_compact inst84;verifie_pere(inst84);
-Tetraedriser_homogene_fin inst85;verifie_pere(inst85);
-Tetraedriser_par_prisme inst86;verifie_pere(inst86);
-Transformer inst87;verifie_pere(inst87);
-Triangle inst88;verifie_pere(inst88);
-Trianguler inst89;verifie_pere(inst89);
-Trianguler_H inst90;verifie_pere(inst90);
-Trianguler_fin inst91;verifie_pere(inst91);
-TroisDto2D inst92;verifie_pere(inst92);
-TroisDto2Daxi inst93;verifie_pere(inst93);
-Verifier_Qualite_Raffinements inst94;verifie_pere(inst94);
-Verifier_Simplexes inst95;verifie_pere(inst95);
-Zone inst96;verifie_pere(inst96);
-Zones inst97;verifie_pere(inst97);
+Reorienter_tetraedres inst72;verifie_pere(inst72);
+Reorienter_triangles inst73;verifie_pere(inst73);
+Rotation inst74;verifie_pere(inst74);
+Scatter inst75;verifie_pere(inst75);
+ScatterFormatte inst76;verifie_pere(inst76);
+Segment inst77;verifie_pere(inst77);
+Sous_Zone inst78;verifie_pere(inst78);
+SupprimeBord inst79;verifie_pere(inst79);
+Tetraedre inst80;verifie_pere(inst80);
+Tetraedriser inst81;verifie_pere(inst81);
+Tetraedriser_homogene inst82;verifie_pere(inst82);
+Tetraedriser_homogene_compact inst83;verifie_pere(inst83);
+Tetraedriser_homogene_fin inst84;verifie_pere(inst84);
+Tetraedriser_par_prisme inst85;verifie_pere(inst85);
+Transformer inst86;verifie_pere(inst86);
+Triangle inst87;verifie_pere(inst87);
+Trianguler inst88;verifie_pere(inst88);
+Trianguler_H inst89;verifie_pere(inst89);
+Trianguler_fin inst90;verifie_pere(inst90);
+TroisDto2D inst91;verifie_pere(inst91);
+TroisDto2Daxi inst92;verifie_pere(inst92);
+Verifier_Qualite_Raffinements inst93;verifie_pere(inst93);
+Verifier_Simplexes inst94;verifie_pere(inst94);
+Zone inst95;verifie_pere(inst95);
+Zones inst96;verifie_pere(inst96);
 }
