@@ -27,8 +27,8 @@ Mailler dom
         }
 
 tetraedriser_homogene dom
-Reordonner_faces_periodiques dom periox
-Reordonner_faces_periodiques dom perioz
+Corriger_frontiere_periodique { domaine dom bord periox }
+Corriger_frontiere_periodique { domaine dom bord perioz }
 
 # END MESH #
 
