@@ -11,7 +11,7 @@ Read_file dom cylindre.geom
 VerifierCoin dom { }
 Dilate dom 1000
 RegroupeBord dom periox { Entree Sortie }
-Reordonner_faces_periodiques dom periox
+Corriger_frontiere_periodique { domaine dom bord periox }
 # END MESH #
 
 # BEGIN PARTITION
